# Monitor_Ativos

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
src/: main.py
src/request/: get_status.py
src/sheet/: create_tokens.py  get_sheet.py  update_sheet.py
